@@ -20,6 +20,7 @@ BULLET
 	beehive = false //round separates into multiple submunitions on Timed/Proximity Fuze detonation
 	subMunitionType = def; 1// only needed if beehive = true, else leave blank/don't add. integer after type specifies # of subprojectiles released
 	projectileTTL= 0.5 //time to live, used by submunitions deployed from beehive rounds to set how long they persist for 
+	subProjectileDispersion = -1 //spread angle of subprojectiles, leave -1 for spread determined by vel and pellet quantity
 	massMod = 0 //mass (in tons) added to hit part. negative values will reduce mass instead
 	impulse = 0// impulse applied to hit part. negative values will pull instead of push
 	tntMass = 0.001
